--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-awesome-alerts": "^1.3.2",
     "react-native-contacts": "^5.2.0",
     "react-native-dotenv": "^0.2.0",
+    "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-material-ui": "^1.30.1",
@@ -31,7 +32,9 @@
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^3.0.4",
     "react-native-screens": "^2.8.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-spokestack": "^3.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tts": "^3.1.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-voice": "^0.3.0",
